fix: remaining alignment issues with sliders

--- a/app/styles/pages/_media-browse.scss
+++ b/app/styles/pages/_media-browse.scss
@@ -478,7 +478,7 @@
     background-color: #1ABC9C;
     height: 14px;
     width: 14px;
-    left: -10px;
+    left: 14px;
     top: -5px;
     &:after {
       display: block;
